--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,8 @@
+dataRetrieval 2.7.12
+===================
+* Updated documentation in readWQPdata
+* 
+
 dataRetrieval 2.7.11
 ==================
 * Updated some documentation to improve examples.
