--- a/README.Rmd
+++ b/README.Rmd
@@ -79,7 +79,7 @@ features <- findNLDI(
 
 # Installation of dataRetrieval
 
-To install the toxEval package, you must be using R 3.0 or greater and run the following command:
+To install the `dataRetrieval` package, you must be using R 3.0 or greater and run the following command:
 
 ```{r eval=FALSE}
 install.packages("dataRetrieval")
@@ -114,16 +114,6 @@ citation(package = "dataRetrieval")
 # Package Support
 
 The Water Mission Area of the USGS supports the development and maintenance of `dataRetrieval`, and most likely further into the future. Resources are available primarily for maintenance and responding to user questions. Priorities on the development of new features are determined by the `dataRetrieval` development team.
-
-# Installation
-
-To install the dataRetrieval package, you must be using R 3.0 or greater and run the following command:
-
-```{r install1, eval=FALSE}
-install.packages("dataRetrieval")
-```
-
-
 
 # Disclaimer
 
