--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+dataRetrieval 2.7.13
+===================
+* Added pcode_to_name function to get WQP characteristics from USGS parameter codes.
+
 dataRetrieval 2.7.12
 ===================
 * Updated documentation in readWQPdata
