--- a/README.Rmd
+++ b/README.Rmd
@@ -112,15 +112,7 @@ citation(package = "dataRetrieval")
 
 The Water Mission Area of the USGS supports the development and maintenance of `dataRetrieval`, and most likely further into the future. Resources are available primarily for maintenance and responding to user questions. Priorities on the development of new features are determined by the `dataRetrieval` development team.
 
-# Disclaimer
+```{r disclaimer, child="DISCLAIMER.md", eval=TRUE}
+```
 
-This software is in the public domain because it contains materials that originally came from the U.S. Geological Survey, an agency of the United States Department of Interior. For more information, see the [official USGS copyright policy](https://www2.usgs.gov/visual-id/credit_usgs.html#copyright)
-
-Although this software program has been used by the U.S. Geological Survey (USGS), no warranty, expressed or implied, is made by the USGS or the U.S. Government as to the accuracy and functioning of the program and related program material nor shall the fact of distribution constitute any such warranty, and no responsibility is assumed by the USGS in connection therewith.
-
-This software is provided "AS IS."
-
- [
-    ![CC0](http://i.creativecommons.org/p/zero/1.0/88x31.png)
-  ](http://creativecommons.org/publicdomain/zero/1.0/)
 
