Getting ready for CRAN submission

--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,7 @@
 dataRetrieval 2.7.13
 ===================
 * Added pcode_to_name function to get WQP characteristics from USGS parameter codes.
+* Required readr version 1.4 or greater
 
 dataRetrieval 2.7.12
 ===================
